@@ -41,7 +41,6 @@
     <jacoco.min.branchcoverage>0.60</jacoco.min.branchcoverage>
     <jacoco.skip>true</jacoco.skip>
     <javaModulesSurefireArgLine>
-      --add-opens io.clientcore.core/io.clientcore.core=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.annotation=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.credential=ALL-UNNAMED
       --add-opens io.clientcore.core/io.clientcore.core.http=ALL-UNNAMED
@@ -92,12 +91,6 @@
       <artifactId>core-json</artifactId>
       <version>1.0.0-beta.1</version> <!-- {x-version-update;io.clientcore:core-json;dependency} -->
       <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>javax.json</groupId>
-      <artifactId>javax.json-api</artifactId>
-      <version>1.1.4</version> <!-- {x-version-update;javax.json:javax.json-api;external_dependency} -->
       <scope>test</scope>
     </dependency>
     <dependency>
